Change form pop-up style from display:none => block to transform: scale(0 => 1)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="addBook">
         <button class="open-button" onclick="openForm()"><img class="plus" src="img/sticker-plus-outline.svg" alt=""></button>
-        <div class="form-popup" id="myForm">
+        <div class="form-popup" id="myForm" style="transition: 0.5s ease-in-out;">
           <form action="/action_page.php" class="form-container">
             <h1>Add Book</h1>
         
