--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               src="img/reading-cat.png"
               alt="Reading Cat"
             />
-            <h1>READING CAT</h1>
+            <h1 class="logo-text">READING CAT</h1>
           </div>
           <div class="signUp">
             <button class="signup">
@@ -28,10 +28,10 @@
             </button>
           </div>
         </div>
+        <button class="open-button">
+          <img class="plus" src="img/sticker-plus-outline.svg" alt="" />
+        </button>
         <div class="addBook">
-          <button class="open-button">
-            <img class="plus" src="img/sticker-plus-outline.svg" alt="" />
-          </button>
           <div
             class="form-popup"
             id="myForm"
